--- a/notebook/Dockerfile.template
+++ b/notebook/Dockerfile.template
@@ -1,9 +1,9 @@
 FROM java:8
 
 
-ENV APACHE_SPARK_VERSION 1.6.1
-ENV APACHE_HADOOP_VERSION 2.6
-ENV APACHE_TOREE_PIP_PACKAGE https://dist.apache.org/repos/dist/dev/incubator/toree/0.1.0/rc3/toree-pip/apache-toree-0.1.0.tar.gz
+ENV APACHE_SPARK_VERSION %%SPARK_VERSION%%
+ENV APACHE_HADOOP_VERSION %%HADOOP_VERSION%%
+ENV APACHE_TOREE_PIP_PACKAGE %%TOREE_PACKAGE%%
 
 
 RUN cd /tmp && \
