--- a/sparkDocker/Dockerfile.template=toto
+++ b/sparkDocker/Dockerfile.template=toto
@@ -1,8 +1,8 @@
 FROM java:8
 
 
-ENV APACHE_SPARK_VERSION 1.6.1
-ENV APACHE_HADOOP_VERSION 2.6
+ENV APACHE_SPARK_VERSION %%SPARK_VERSION%%
+ENV APACHE_HADOOP_VERSION %%HADOOP_VERSION%%
 
 
 RUN cd /tmp && \
