--- a/docker-compose-builded.yml
+++ b/docker-compose-builded.yml
@@ -17,14 +17,14 @@ services:
       - 7077
       - 6066
     ports:
-      - 4040:4040
-      - 6066:6066
-      - 7077:7077
-      - 28080:8080
+      - 4040
+      - 6066
+      - 7077
+      - 8080
     #volumes:
     #  - ./conf/master:/conf
     networks:
-      - spark-clstr
+      - spark-clstr-dev
 
   worker:
     image: spark:1.6.1
@@ -39,24 +39,24 @@ services:
     #volumes:
     #  - ./conf/worker:/conf
     networks:
-      - spark-clstr
+      - spark-clstr-dev
 
   spark-ui-proxy:
     image: yanndegat/spark-ui-proxy
     command: master:8080 9999
     ports:
-      - 8080:9999
+      - 9999
     networks:
-      - spark-clstr
+      - spark-clstr-dev
 
   jupyter:
     image: jupyter-spark:1.6.1
     ports:
-      - 8888:8888
+      - 8888
     networks:
-      - spark-clstr
+      - spark-clstr-dev
     environment:
       - SPARK_OPTS=--master spark://master:7077 --executor-memory 3gb --properties-file ~/work/spark-properties.conf
 
 networks:
-  spark-clstr:
+  spark-clstr-dev:
