--- a/notebook/Dockerfile.template
+++ b/notebook/Dockerfile.template
@@ -96,10 +96,11 @@ RUN cd /tmp && \
     wget --quiet https://repo.continuum.io/archive/Anaconda3-4.3.0-Linux-x86_64.sh && \
     /bin/bash Anaconda3-4.3.0-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
     rm Anaconda3-4.3.0-Linux-x86_64.sh && \
-    $CONDA_DIR/bin/conda install --quiet --yes conda==4.3.0 && \
+    $CONDA_DIR/bin/conda install --yes python=3.5.2 && \
     $CONDA_DIR/bin/conda config --system --add channels conda-forge && \
     $CONDA_DIR/bin/conda config --system --set auto_update_conda false && \
     conda clean -tipsy
+
 
 
 
@@ -165,15 +166,15 @@ USER $NB_USER
 
 # Install Python 2 kernel spec into the Python 3 conda environment which
 # runs the notebook server
-RUN bash -c '. activate python2 && \
-    python -m ipykernel.kernelspec --prefix=$CONDA_DIR && \
-    . deactivate'
+#RUN bash -c '. activate python2 && \
+#    python -m ipykernel.kernelspec --prefix=$CONDA_DIR && \
+#    . deactivate'
 
 # Set PYSPARK_HOME in the python2 spec
-RUN jq --arg v "$CONDA_DIR/envs/python2/bin/python" \
-        '.["env"]["PYSPARK_PYTHON"]=$v' \
-        $CONDA_DIR/share/jupyter/kernels/python2/kernel.json > /tmp/kernel.json && \
-        mv /tmp/kernel.json $CONDA_DIR/share/jupyter/kernels/python2/kernel.json
+#RUN jq --arg v "$CONDA_DIR/envs/python2/bin/python" \
+#        '.["env"]["PYSPARK_PYTHON"]=$v' \
+#        $CONDA_DIR/share/jupyter/kernels/python2/kernel.json > /tmp/kernel.json && \
+#        mv /tmp/kernel.json $CONDA_DIR/share/jupyter/kernels/python2/kernel.json
 
 
 
@@ -200,4 +201,4 @@ RUN jupyter toree install --user --interpreters=PySpark,SQL,Scala,SparkR
 
 #Set by default python2.7
 #ENV PATH "$CONDA_DIR/envs/python2/bin/:$PATH"
-#COPY spark-properties.conf /home/$NB_USER/work/
+COPY spark-properties.conf /home/$NB_USER/work/
